Update public dir

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Jack Hutchinson personal site">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="typescript-scaffolding" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="Jack Hutchinson" content="Jack Hutchinson's portfolio" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Movie API</title>
+  <title>MovieDB</title>
 </head>
 
 <body>
